# wav_editor-lite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_example.bat  setup.py  setup_example.bat
wav_editor-lite/arrange_clips/: arrange_clips.py
wav_editor-lite/json_processor/: json_processor.py
wav_editor-lite/track_sync/: track_sync.py
wav_editor_lite/: main_test.py
wav_editor_lite/add_amplify/: __init__.py  add_amplify.py
wav_editor_lite/add_silence/: __init__.py  add_silence.py
wav_editor_lite/arrange_clips/: __init__.py  arrange_clips.py
wav_editor_lite/json_data_test/: Hyrule_Field.json  Overture.json
wav_editor_lite/json_processor/: __init__.py  json_processor.py
wav_editor_lite/track_sync/: __init__.py  track_sync.py
